// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/SearchBar Default 1`] = `
<div
  className="storybook-container"
>
  <div>
    <p>
      Filter the entries by text
    </p>
    <div
      className="borrow-ui__search-bar"
    >
      <input
        className="borrow-ui__form__field__input   borrow-ui__search-bar__input"
        onChange={[Function]}
        value={null}
      />
    </div>
  </div>
  <div>
    <h3>
      Story filtered entries:
    </h3>
    <ul>
      <li>
        id: 1, name: first entry
        : 
      </li>
      <li>
        id: 2, name: second entry
        : 
      </li>
      <li>
        id: 3, name: third entry
        : 
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/SearchBar Exact match: disable stringIncludes 1`] = `
<div
  className="storybook-container"
>
  <div>
    <p>
      Filter the entries by text
    </p>
    <div
      className="borrow-ui__search-bar"
    >
      <input
        className="borrow-ui__form__field__input   borrow-ui__search-bar__input"
        onChange={[Function]}
        value={null}
      />
    </div>
  </div>
  <div>
    <h3>
      Story filtered entries:
    </h3>
    <ul>
      <li>
        id: 1, name: first entry, group: group 1
        : 
      </li>
      <li>
        id: 2, name: second entry, group: group 2
        : 
      </li>
      <li>
        id: 3, name: third entry, group: group 1
        : 
      </li>
    </ul>
  </div>
</div>
`;
